--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f973bf7e0d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb1fe170d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f973c3c8350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f973c3c8550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb1f81b350&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb1f81b590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f973c7d2cd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f973c7d2ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7feb1ffa8c50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7feb1ffa8e90&gt;]</pre>
 </div>
 
 </div>
