--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7feb1fe170d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1091f879d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb1f81b350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb1f81b590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f1092310450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f1092310650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7feb1ffa8c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7feb1ffa8e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f109271dd10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f109271df10&gt;]</pre>
 </div>
 
 </div>
