--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1091f879d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f20c5680c10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1092310450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1092310650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20c461b4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f20c461b6d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f109271dd10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f109271df10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f20c4da6d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f20c4da6f50&gt;]</pre>
 </div>
 
 </div>
