--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f48fbe22310&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7efd2296fad0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48fc25e350&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f48fc25e550&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efd22862610&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efd22862810&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48fc671c50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f48fc671e50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7efd22fecf90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7efd22ffb1d0&gt;]</pre>
 </div>
 
 </div>
