--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2bc18f37d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7c1b953ad0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bc1674550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2bc1674750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c1b4023d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c1b4025d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2bc1a80ed0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2bc1a8e110&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7c1bb4dcd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7c1bb4ded0&gt;]</pre>
 </div>
 
 </div>
