--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f36a64ab4d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f33392d4310&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f36a07613d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f36a07615d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3338699490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3338699690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f36a0b6de10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f36a0b6dfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3338aace50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3338aba090&gt;]</pre>
 </div>
 
 </div>
