--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fde899a3690&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe6cedf4ed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fde891fea50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fde89568710&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe6ceeb9590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe6ceeb9790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fde89963410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fde8997f0d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe6cf643e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe6cf6510d0&gt;]</pre>
 </div>
 
 </div>
