--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70029f4b90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f53d5df6cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f70028f2390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f70028f25d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53d6474e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53d623d850&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f700303cd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f700303cfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f53d623e650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f53d6656150&gt;]</pre>
 </div>
 
 </div>
