--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9985c523d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa89ff9d4d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f99858e0590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f99858e0790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8a008d110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa8a008d490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f998606ae50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f9986077090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa8a07e5b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa8a07e5e90&gt;]</pre>
 </div>
 
 </div>
