--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff07e836350&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8ff52993d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff0787044d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff0787046d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ff510c550&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8ff510c750&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff078e8ee10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff078e8efd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8ff5897dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8ff5897fd0&gt;]</pre>
 </div>
 
 </div>
