--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f59d6d7b790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f313c7b5e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f59d6fee490&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f59d6fee690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f313c2512d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f313c251510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f59d73fdd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f59d73fdf90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f313c99dc50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f313c99de90&gt;]</pre>
 </div>
 
 </div>
