--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2ea0b279d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fb3db0ea2d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ea0a94550&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2ea0a94750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3dab58410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb3dab58610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2ea121ee50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2ea122c090&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fb3db2e2d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fb3db2e2f90&gt;]</pre>
 </div>
 
 </div>
