--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1f334b3550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6d6b144b50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f33575450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1f33575690&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d6b3709d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6d6afee7d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1f3358e5d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1f33cfff90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f6d6b769590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f6d6b7850d0&gt;]</pre>
 </div>
 
 </div>
