--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f60c8398e90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd158146ed0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f60c84603d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f60c84605d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd1582503d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd1582505d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f60c8beccd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f60c8beced0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd15899ccd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd15899ced0&gt;]</pre>
 </div>
 
 </div>
