--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3390cc810&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f8a0ebf6e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff338eef690&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff338eef890&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a0f037390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a0f037590&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff338f17110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff33930d250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f8a0f446c90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f8a0f446e90&gt;]</pre>
 </div>
 
 </div>
