--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f509b15b750&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faeb4c79110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f509af34450&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f509af34650&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae8b020790&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae8b020990&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f509b341d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f509b341f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fae8b4170d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fae8b4172d0&gt;]</pre>
 </div>
 
 </div>
