--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6e5e41ab10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3a42108550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e5e8e0dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e5e6ca590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a41bdb590&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3a41bdb790&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f6e5e6ed190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f6e5ead8e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a42364e90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3a423720d0&gt;]</pre>
 </div>
 
 </div>
