--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3a42108550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffafa4c5c50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a41bdb590&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a41bdb790&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffafa2a6490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffafa2a6690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f3a42364e90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f3a423720d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffafa6abd50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffafa6abf50&gt;]</pre>
 </div>
 
 </div>
