--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f81a9e732d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fe7927d60d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f81a91984d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f81a8e1b610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7925b2650&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7925b2850&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f81a959cd90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f81a95a6ed0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fe7929c0f10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fe7929ce150&gt;]</pre>
 </div>
 
 </div>
