--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f49d7add390&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0a51010710&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49d7f4e7d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49d7f4e9d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a51356450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a51356650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f49d833e050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f49d833e250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0a51765d10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0a51765f10&gt;]</pre>
 </div>
 
 </div>
