--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5dd7d67e50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f3f707c80d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5dd7e6e510&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5dd7e6e750&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f6f7aa450&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3f6f7aa650&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5dd85b8dd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5dd85b8fd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f3f6ff34d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f3f6ff34f90&gt;]</pre>
 </div>
 
 </div>
