--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f75dae300d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa7be40650&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f75dae386d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f75dae388d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faa7bca24d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faa7bca26d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f75db5c3f50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f75db5d1190&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7faa7c42ddd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7faa7c42dfd0&gt;]</pre>
 </div>
 
 </div>
