--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faa7be40650&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4bf360c810&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa7bca24d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa7bca26d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4bf3068490&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4bf3068690&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faa7c42ddd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faa7c42dfd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f4bf37f2dd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f4bf37f2fd0&gt;]</pre>
 </div>
 
 </div>
